--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "framer-motion": "^11.0.6",
     "html-react-parser": "^5.1.1",
     "lucide-react": "^0.317.0",
-    "next": "14.1.0",
+    "next": "^14.2.6",
     "next-auth": "^4.24.5",
     "puppeteer": "^21.10.0",
     "react": "^18",
